# registry_client

./: .gitignore  Dockerfile  README.md  READNE.md  client.py  decompress.py  pyproject.toml  registry_info.toml  tox.ini  utlis.py
.github/workflows/: python-app.yml
registry_client/: _version.py  auth.py  client.py  decompress.py  digest.py  errors.py  export.py  image.py  main.py  manifest.py  media_types.py  new_client.py  platforms.py  reference.py  registry.py  repo.py  scope.py  spec.py  utlis.py
src/: client.py  digest.py  platforms.py  utlis.py
tests/: conftest.py  docker_hub_client.py  local_docker.py  test_auth.py  test_cli.py  test_client.py  test_image.py  test_pull.py  test_reference.py  test_registry.py  test_repo.py
