[tool.poetry]
name = "registry_client"
version = "0.1.0"
description = "Communicate with Docker Registry (docker hub, harbor) via Docker Registry V2 without docker"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/immortal-n/registry_client"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"


[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
loguru = "^0.6.0"
tqdm = "^4.64.1"
pydantic = "^1.10.2"
iso8601 = "^1.0.2"
typer = "^0.6.1"
google-re2 = "^0.2.20220601"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
tomlkit = "^0.11.4"
pytest = "^7.1.3"
docker = "^6.0.0"
pytest-cov = "^4.0.0"
black = "^22.10.0"

[tool.black]
line = 120

[tool.isort]
profile = "black"
src_paths = ["registry_client", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
registry_client = "registry_client.main:app"
